--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 }
 html,  body{
     box-sizing: border-box;
+    box-sizing: border-box;
     width: 100%;
     min-height: 100vh;
     display: flex;
@@ -42,6 +43,7 @@ html,  body{
     align-items: center;
     flex-direction: column;
     display: flex;
+    display: flex;
 
 }
 .gameBox .inputBox input{
@@ -62,6 +64,7 @@ html,  body{
     margin-top: 5px;
 }
 .buttonBox{
+    position: relative;
     position: relative;
     display: flex;
     align-items: center;
